<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.8</version>
    </parent>
    <groupId>no.nav.tilbakemeldingsmottak</groupId>
    <artifactId>tilbakemeldingsmottak</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>web</module>
        <module>app</module>
        <module>domain</module>
        <module>pdfutility</module>
    </modules>

    <properties>
        <!-- Keep up to date with parent version -->
        <spring-boot.version>2.7.8</spring-boot.version>
        <cxf.version>3.5.5</cxf.version>

        <microsoft-graph.version>5.41.0</microsoft-graph.version>
        <microsoft-graph-core.version>2.0.14</microsoft-graph-core.version>
        <azure.identity.version>1.7.3</azure.identity.version>

        <!-- NAV internal dependencies -->
        <token-support.version>2.1.7</token-support.version>
        <mock-oauth2-server.version>0.5.7</mock-oauth2-server.version>
        <!-- Spesifiserer eksplisitt for å unngå transitiv import av 8.x.x versjon som gjør at oppslag feiler -->
        <nimbus-jose-jwt.version>9.24.4</nimbus-jose-jwt.version>

        <oracle.version>19.3.0.0</oracle.version>
        <spring-cloud-contract-wiremock.version>2.2.5.RELEASE</spring-cloud-contract-wiremock.version>
        <spring-core.version>5.3.24</spring-core.version>
        <caffeine.version>2.9.3</caffeine.version>
        <netty-all.version>4.1.86.Final</netty-all.version>
        <javax.activation.version>1.2.0</javax.activation.version>

        <!-- Dependencies that should be on the latest version -->
        <httpclient.version>4.5.13</httpclient.version>
        <okhttp3.version>4.10.0</okhttp3.version>
        <rxjava.version>3.1.4</rxjava.version>
        <jackson-bom.version>2.14.1</jackson-bom.version>
        <javax.inject.version>1</javax.inject.version>
        <javax.xml-bind.version>2.3.1</javax.xml-bind.version>
        <jakarta.activation.version>2.0.1</jakarta.activation.version>
        <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
        <lombok.version>1.18.24</lombok.version>
        <mockito-junit-jupiter.version>4.5.1</mockito-junit-jupiter.version>
        <resilience4j.version>1.7.1</resilience4j.version>
        <micrometer.version>1.9.2</micrometer.version>
        <wiremock.version>2.27.2</wiremock.version>
        <json-smart.version>2.4.8</json-smart.version>
        <rest-assured.version>5.0.1</rest-assured.version>

        <!-- Maven plugins -->
        <wagon-webdav-jackrabbit.version>3.5.1</wagon-webdav-jackrabbit.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>

        <!-- Project config -->
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>

            <dependency>
                <groupId>no.nav.tilbakemeldingsmottak</groupId>
                <artifactId>web</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>${wagon-webdav-jackrabbit.version}</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                     <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>central</id>
            <name>maven central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
        <repository>
            <id>github</id>
            <name>nav github</name>
            <url>https://github-package-registry-mirror.gc.nav.no/cached/maven-release</url>
        </repository>
        <repository>
            <id>bintray</id>
            <name>Bintray</name>
            <url>https://jcenter.bintray.com</url>
        </repository>
    </repositories>
</project>
